--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        
+    </div>
 <script src="./js/index.js"></script>
 </body>
 </html>
